attached_assets/error
C:\Users\jimenez.n\Downloads\Server-v2 (25)\Server-v2>npm run dev

> rest-express@1.0.0 dev
> cross-env NODE_ENV=development tsx server/index.ts

C:\Users\jimenez.n\Downloads\Server-v2 (25)\Server-v2\server\routes.ts:8
  insertSystemSettingsSchema, insertVmInventorySchema, insertVmApprovalHistorySchema, insertBitlockerKeySchema, insertIamAccountSchema, insertMonitorSchema, insertItEquipmentSchema, insertVMMonitoringSchema, insertNetworkHostSchema, insertMonitoringDashboardSchema, insertMonitoringDatasourceSchema, insertMonitoringAlertRuleSchema, insertMonitoringPanelSchema,
                                                                                                                                                                                                                ^

SyntaxError: The requested module '@shared/schema' does not provide an export named 'insertNetworkHostSchema'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:220:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:321:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:644:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.17.0
